[chromium] REGRESSION(94353): requestAnimationFrame not throttled in compositing path https://bugs.webkit.org/show_bug.cgi?id=67621

CCSingleThreadProxy should not perform layout when called
via the compositeImmediately path. Doing so makes it look
like frame rate is unbounded.

Reviewed by James Robinson.

* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::compositeAndReadback):
(WebCore::CCSingleThreadProxy::compositeImmediately):
(WebCore::CCSingleThreadProxy::commitIfNeeded):
* platform/graphics/chromium/cc/CCSingleThreadProxy.h:

Canonical link: https://commits.webkit.org/83492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94587 268f45cc-cd09-0410-ab3c-d52691b4dbfc